Added server file , attempt to create a fetcher with validation.

--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -25,6 +25,12 @@ img
     margin-top: 50px
     font-weight: bold
 
+.chunk
+    font-size: 28px
+    text-align: center
+    margin-top: 50px
+    font-weight: bold
+
 .container
     display: flex
     flex-direction: column
