--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -28,7 +28,7 @@ img
 .chunk
     font-size: 28px
     text-align: center
-    margin-top: 50px
+    margin-top: 30px
     font-weight: bold
 
 .container
@@ -71,6 +71,9 @@ img
         width: 150px
         height: 150px
         margin: 30px
+    .chunk
+        font-size: 38px
+        margin-top: 50px
     .title
         color: $highlight
         font-size: 40px
