Final touches to align objects with loader on the page

--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -46,7 +46,7 @@ img
     position: relative
     width: 40px
     height: 40px
-    margin-top: 30px
+    margin-top: 50px
     padding: 10px
     &:before
         content: ""
@@ -70,7 +70,7 @@ img
     img
         width: 150px
         height: 150px
-        margin: 30px
+        margin-horizontal: 30px
     .chunk
         font-size: 38px
         margin-top: 50px
